Add per-world support for remaining settings